<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/margin_horizontal"
    android:layout_marginVertical="@dimen/margin_vertical"
    tools:context=".EducationActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/education"
        android:gravity="center"
        style="@style/title"/>

    <LinearLayout
        android:id="@+id/amirkabir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_education"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/amirkabir_univ"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/margin_vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amirkabir_degree"
                style="@style/subtitle"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/software"
                style="@style/body"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amirkabir"
                style="@style/body"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amirkabir_date"
                style="@style/body"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amirkabir_average"
                style="@style/body"
                android:gravity="right"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amirkabir"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/shahrekord_univ"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shahrekord_degree"
                style="@style/subtitle"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/software"
                style="@style/body"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shahrekord"
                style="@style/body"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/shahrekord_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shahrekord_average"
                style="@style/body"
                android:gravity="right"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>