<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="@dimen/margin_vertical"
    android:layout_marginHorizontal="@dimen/margin_horizontal"
    tools:context=".CareerActivity"
    android:layout_gravity="end">

    <LinearLayout
        android:id="@+id/ll_abfa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_career"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/career"
            style="@style/title"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_abfa_chb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/abfa_chb"
            style="@style/subtitle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_intern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/intern"
            style="@style/body"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_abfa_chb_years"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/abfa_chb_date"
            style="@style/body"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/achievements"
            style="@style/body"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_site_database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/site_database"
            style="@style/body"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:layout_margin="@dimen/margin_horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@id/ll_abfa"
        android:src="@drawable/abfa"/>

</RelativeLayout>